Fixed games to correctly show prize banner in december & fixed constant login glitch on iphone

--- a/css/custom-css.css
+++ b/css/custom-css.css
@@ -64,6 +64,12 @@ button.btn.btn-primary {
     -webkit-transform: translateX(-50%)
 }
 
+@media (min-width: 576px) {
+    #bannerimg {
+        display: none;
+    }
+}
+
 @media screen and (min-width: 301px) {
     #stackerzbody {
         display: block;
